feature(nx-setup) Setting up material ui t theme

--- a/apps/ew-crowdfunding/pages/global.css
+++ b/apps/ew-crowdfunding/pages/global.css
@@ -8,7 +8,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: inherit;
+  font-family: "Roboto","Helvetica","Arial",sans-serif;
   line-height: inherit;
   margin: 0;
 }
