--- a/apps/ew-crowdfunding/pages/global.css
+++ b/apps/ew-crowdfunding/pages/global.css
@@ -54,3 +54,14 @@ pre {
   overflow: scroll;
   padding: 0.5rem 0.75rem;
 }
+
+.backgroundImage {
+  background-image: 'url(/Vector.png)';
+  background-position: 'center';
+  background-repeat: 'no-repeat';
+  background-size: 'cover';
+  height: '100%';
+  min-height: '100%';
+  z-index: 5;
+  top: 0;
+}
