Dialog design improvs

--- a/apps/ew-crowdfunding/pages/global.css
+++ b/apps/ew-crowdfunding/pages/global.css
@@ -123,9 +123,9 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .bg-warning {
-  background-color: #ffcc80;
+  background-color: #FBDB3C;
 }
 
 .bg-success {
-  background-color: #1de9b6;
+  background-color: #6ED2B1;
 }
