--- a/apps/ew-crowdfunding/pages/global.css
+++ b/apps/ew-crowdfunding/pages/global.css
@@ -7,7 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: inherit;
   margin: 0;
 }
